Fix #show-advert-owner scrolltofix on mobile.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -168,7 +168,7 @@
   }
 
   #show-advert-owner {
-    position: static;
+    position: static !important;
     float: none;
     width: 100%;
     margin: 0;
